JumpScript/tests/baselines/reference/accessorWithRestParam.errors.txt
tests/cases/compiler/accessorWithRestParam.jump(2,11): error TS1053: A 'set' accessor cannot have rest parameter.
tests/cases/compiler/accessorWithRestParam.jump(3,18): error TS1053: A 'set' accessor cannot have rest parameter.


==== tests/cases/compiler/accessorWithRestParam.jump (2 errors) ====
    class C {
        set X(...v) { }
              ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
        static set X(...v2) { }
                     ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
    }